Add MobileMenu component and styles*** ***Add Services.css*** ***Add MobileMenu to layout*** ***Update Syllabus.css*** ***Add NewsletterForm component and styles*** ***Update Questions component and styles*** ***Update Navigation component and styles*** ***Update Questions.css

--- a/circle-frontend/app/globals.css
+++ b/circle-frontend/app/globals.css
@@ -21,6 +21,10 @@
     @apply leading-[1.4em];
   }
 
+  .input-field-error {
+    @apply mt-2 block text-left text-sm italic text-red-500;
+  }
+
   /* width */
   ::-webkit-scrollbar {
     @apply w-[10px];
@@ -43,7 +47,6 @@
 }
 
 @layer components {
-  /* General */
   .container {
     @apply max-w-[1310px] mx-auto my-0;
   }
@@ -65,151 +68,6 @@
   }
 
   /* End of General */
-
-  /* Services */
-  .services {
-    @apply bg-[url('/images/bg_courses.svg')] bg-no-repeat bg-cover bg-center py-[100px] rounded-[50px] xl:py-[200px] px-5;
-  }
-
-  .services-header {
-    @apply flex flex-col gap-[30px] text-center items-center justify-between text-white mb-[64px] max-w-[800px] mx-auto lg:max-w-full xl:flex-row xl:text-left;
-  }
-
-  .service-card-head {
-    @apply relative z-[1];
-  }
-
-  .services-title {
-    @apply mb-0;
-  }
-
-  .service-desc {
-    @apply max-w-[520px] text-[22px] opacity-70;
-  }
-
-  .services-inner {
-    @apply flex flex-col lg:flex-row gap-[60px];
-  }
-
-  .service-card {
-    @apply bg-[#f8efe5] min-h-[300px] pt-[40px] pb-[56px] px-[32px] overflow-hidden rounded-[40px] relative z-[2] flex flex-col gap-[30px] justify-between  mx-auto  xl:min-h-[500px] max-w-full w-full lg:max-w-[415px];
-  }
-
-  .service-card-tag {
-    @apply mb-[16px] text-[22px] tracking-[1px] uppercase;
-  }
-
-  .service-title {
-    @apply mb-0;
-  }
-
-  .service-img-container {
-    @apply hidden absolute right-0 bottom-0 z-[1] sm:block;
-  }
-
-  .service-img {
-    @apply relative;
-  }
-
-  .hr-hand {
-    @apply absolute right-[68px] bottom-[53px] w-[22px] h-[6px] bg-[#9b5c8f] rounded-[100px] transform -rotate-[20deg] transition-all duration-[.3s] ease-in-out;
-  }
-
-  .service-card:hover .hr-hand {
-    @apply rotate-[20deg] bottom-[58px];
-  }
-
-  .service-img-item-2,
-  .service-img-item-2-alt {
-    @apply absolute bottom-0 right-0 transition-all duration-[.4s] ease-in-out;
-  }
-
-  .service-img-item-2 {
-    @apply opacity-0;
-  }
-
-  .service-card:hover .service-img-item-2 {
-    @apply opacity-100;
-  }
-
-  .service-read-more {
-    @apply pr-[32px] text-[#0f86a1] text-[22px] tracking-[.01em] uppercase font-[300] bg-[url('/images/ico_arrow-blue.svg')] bg-no-repeat bg-[right_50%] self-start transition-all duration-[.2s] relative z-[1];
-  }
-
-  .service-card:hover .service-read-more {
-    @apply lg:pr-[40px];
-  }
-
-  .bg-hover {
-    @apply hidden absolute -left-[100px] top-auto right-auto -bottom-[100px] h-0 w-0 bg-white rounded-[1000px] will-change-[width_height] transition-all duration-[.4s] ease-in-out z-0 lg:block;
-  }
-
-  .service-card:hover .bg-hover {
-    @apply h-[700px] w-[700px];
-  }
-  /* End of Services */
-
-  /* Questions */
-  .questions {
-    @apply bg-[url('/images/bg_questions.svg')] bg-no-repeat bg-[left_center] text-white rounded-[50px] py-[100px] bg-cover;
-  }
-
-  .questions-inner {
-    @apply grid gap-[80px] justify-center items-center max-w-[1200px] mx-auto xl:grid-cols-2 xl:justify-start xl:gap-[30px];
-  }
-
-  .questions-text {
-    @apply max-w-[530px] text-center xl:text-left;
-  }
-
-  .questions-title {
-    @apply mb-[40px];
-  }
-
-  .questions-text .subheading {
-    @apply mb-[40px];
-  }
-
-  .form-inner {
-    @apply flex flex-col lg:flex-row gap-[16px];
-  }
-
-  .input-wrap {
-    @apply flex flex-1 min-h-[70px];
-  }
-
-  .input-field {
-    @apply px-[32px] border border-[hsla(0,0%,100%,.3)] leading-[2em] bg-transparent w-full text-white rounded-[100px] transition-[border] duration-[.6s] ease-in-out placeholder:text-white placeholder:opacity-[.7] placeholder:text-[18px] hover:border-white;
-  }
-
-  .questions-img {
-    @apply relative;
-  }
-
-  .main-q-img {
-    @apply mx-auto relative z-[1];
-  }
-
-  .main-q-img-bg {
-    @apply absolute bottom-0;
-  }
-
-  .plane {
-    @apply absolute left-0 top-0 sm:left-[22px] sm:top-[53px];
-  }
-
-  .questions-circle-border {
-    @apply hidden w-[16px] h-[16px] border border-black rounded-[50%] absolute right-[106px] bottom-[354px] md:block;
-  }
-
-  .questions-circle-color {
-    @apply hidden w-[20px] h-[20px] bg-[#ebc7b5] rounded-[50%] absolute left-[35px] bottom-[206px] md:block;
-  }
-
-  .questions-circle-dot {
-    @apply hidden w-[8px] h-[8px] bg-black rounded-[50%] absolute left-[95px] bottom-[186px] md:block;
-  }
-  /* End of Questions */
 }
 
 @layer utilities {
@@ -227,5 +85,9 @@
   .animate-link:hover::after {
     transform: scaleX(1);
     transform-origin: 0 100%;
+  }
+
+  .input-field {
+    @apply px-[32px] border h-full border-[hsla(0,0%,100%,.3)] leading-[2em] bg-transparent w-full text-white rounded-[100px] transition-[border] duration-[.6s] ease-in-out placeholder:text-white placeholder:opacity-[.7] placeholder:text-[18px] hover:border-white;
   }
 }
