Update Navigation logo size in CSS

--- a/circle-frontend/components/Navigation/Navigation.css
+++ b/circle-frontend/components/Navigation/Navigation.css
@@ -16,11 +16,11 @@
 }
 
 .nav-logo {
-  @apply w-[100px] lg:w-[189px];
+  @apply lg:max-w-[189px];
 }
 
 .nav-logo svg {
-  @apply h-[55px];
+  @apply h-[55px] w-full;
 }
 
 .nav-logo svg path {
